Optimized SaturationRelaxationUtilities._has_converged.

--- a/2D_CA_snowflakes.ipynb
+++ b/2D_CA_snowflakes.ipynb
@@ -55,7 +55,7 @@
    "source": [
     "gu = icef.GeneralUtilities(101) # general utilities\n",
     "\n",
-    "pu = icef.PhysicsUtilities(0.01, 10) # physics utilities\n",
+    "pu = icef.PhysicsUtilities(0.01, 10, X_0=2) # physics utilities\n",
     "\n"
    ]
   },
@@ -63,39 +63,118 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "sru = icef.SaturationRelaxationUtilities(101, 200)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [
     {
-     "ename": "TypingError",
-     "evalue": "Failed in nopython mode pipeline (step: nopython frontend)\n\u001b[1m\u001b[1m\u001b[1m\u001b[1mFailed in nopython mode pipeline (step: nopython frontend)\n\u001b[1m\u001b[1m\u001b[1m\u001b[1m- Resolution failure for literal arguments:\n\u001b[1mFailed in nopython mode pipeline (step: native lowering)\nLLVM IR parsing error\n<string>:467:140: error: base element of getelementptr must be sized\n  %\".1702\" = getelementptr inbounds {i32, i32, %\"deferred.140471490431008.data\", i32, {i8*, i8*, i64, i64, float*, [3 x i64], [3 x i64]}}, {i32, i32, %\"deferred.140471490431008.data\", i32, {i8*, i8*, i64, i64, float*, [3 x i64], [3 x i64]}}* %\".1701\", i32 0, i32 1\n                                                                                                                                           ^\n\u001b[0m\n\u001b[0m\u001b[1m- Resolution failure for non-literal arguments:\n\u001b[1mNone\u001b[0m\n\u001b[0m\u001b[0m\n\u001b[0m\u001b[1mDuring: resolving callee type: BoundFunction((<class 'numba.core.types.misc.ClassInstanceType'>, '_construct_default_diffusion_rules') for instance.jitclass.SaturationRelaxationUtilities#7fc21149c5b0<L:int32,W:int32,PU:DeferredType#140471490431008,max_iter:int32,diffusion_rules:array(float32, 3d, C)>)\u001b[0m\n\u001b[0m\u001b[1mDuring: typing of call at /home/t-o/repos/Cellular-automaton-ice/ice_funcs.py (378)\n\u001b[0m\n\u001b[1m\nFile \"ice_funcs.py\", line 378:\u001b[0m\n\u001b[1m    def __init__(self, L, PhysicsUtilities_inst, max_iter):\n        <source elided>\n        # diffusion rules do not change and only need to be generated once\n\u001b[1m        self.diffusion_rules = self._construct_default_diffusion_rules()\n\u001b[0m        \u001b[1m^\u001b[0m\u001b[0m\n\n\u001b[0m\u001b[1mDuring: resolving callee type: jitclass.SaturationRelaxationUtilities#7fc21149c5b0<L:int32,W:int32,PU:DeferredType#140471490431008,max_iter:int32,diffusion_rules:array(float32, 3d, C)>\u001b[0m\n\u001b[0m\u001b[1mDuring: typing of call at <string> (3)\n\u001b[0m\n\u001b[0m\u001b[1mDuring: resolving callee type: jitclass.SaturationRelaxationUtilities#7fc21149c5b0<L:int32,W:int32,PU:DeferredType#140471490431008,max_iter:int32,diffusion_rules:array(float32, 3d, C)>\u001b[0m\n\u001b[0m\u001b[1mDuring: typing of call at <string> (3)\n\u001b[0m\n\u001b[1m\nFile \"<string>\", line 3:\u001b[0m\n\u001b[1m<source missing, REPL/exec in use?>\u001b[0m\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypingError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_28575/2571636443.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msru\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0micef\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSaturationRelaxationUtilities\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m101\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpu\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m200\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/miniconda3/lib/python3.9/site-packages/numba/experimental/jitclass/base.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(cls, *args, **kwargs)\u001b[0m\n\u001b[1;32m    122\u001b[0m         \u001b[0mbind\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcls\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_ctor_sig\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbind\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    123\u001b[0m         \u001b[0mbind\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapply_defaults\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 124\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mcls\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_ctor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mbind\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mbind\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    125\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    126\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/miniconda3/lib/python3.9/site-packages/numba/core/dispatcher.py\u001b[0m in \u001b[0;36m_compile_for_args\u001b[0;34m(self, *args, **kws)\u001b[0m\n\u001b[1;32m    466\u001b[0m                 \u001b[0me\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpatch_message\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmsg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    467\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 468\u001b[0;31m             \u001b[0merror_rewrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'typing'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    469\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0merrors\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mUnsupportedError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    470\u001b[0m             \u001b[0;31m# Something unsupported is present in the user code, add help info\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/miniconda3/lib/python3.9/site-packages/numba/core/dispatcher.py\u001b[0m in \u001b[0;36merror_rewrite\u001b[0;34m(e, issue_type)\u001b[0m\n\u001b[1;32m    407\u001b[0m                 \u001b[0;32mraise\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    408\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 409\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwith_traceback\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    410\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    411\u001b[0m         \u001b[0margtypes\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypingError\u001b[0m: Failed in nopython mode pipeline (step: nopython frontend)\n\u001b[1m\u001b[1m\u001b[1m\u001b[1mFailed in nopython mode pipeline (step: nopython frontend)\n\u001b[1m\u001b[1m\u001b[1m\u001b[1m- Resolution failure for literal arguments:\n\u001b[1mFailed in nopython mode pipeline (step: native lowering)\nLLVM IR parsing error\n<string>:467:140: error: base element of getelementptr must be sized\n  %\".1702\" = getelementptr inbounds {i32, i32, %\"deferred.140471490431008.data\", i32, {i8*, i8*, i64, i64, float*, [3 x i64], [3 x i64]}}, {i32, i32, %\"deferred.140471490431008.data\", i32, {i8*, i8*, i64, i64, float*, [3 x i64], [3 x i64]}}* %\".1701\", i32 0, i32 1\n                                                                                                                                           ^\n\u001b[0m\n\u001b[0m\u001b[1m- Resolution failure for non-literal arguments:\n\u001b[1mNone\u001b[0m\n\u001b[0m\u001b[0m\n\u001b[0m\u001b[1mDuring: resolving callee type: BoundFunction((<class 'numba.core.types.misc.ClassInstanceType'>, '_construct_default_diffusion_rules') for instance.jitclass.SaturationRelaxationUtilities#7fc21149c5b0<L:int32,W:int32,PU:DeferredType#140471490431008,max_iter:int32,diffusion_rules:array(float32, 3d, C)>)\u001b[0m\n\u001b[0m\u001b[1mDuring: typing of call at /home/t-o/repos/Cellular-automaton-ice/ice_funcs.py (378)\n\u001b[0m\n\u001b[1m\nFile \"ice_funcs.py\", line 378:\u001b[0m\n\u001b[1m    def __init__(self, L, PhysicsUtilities_inst, max_iter):\n        <source elided>\n        # diffusion rules do not change and only need to be generated once\n\u001b[1m        self.diffusion_rules = self._construct_default_diffusion_rules()\n\u001b[0m        \u001b[1m^\u001b[0m\u001b[0m\n\n\u001b[0m\u001b[1mDuring: resolving callee type: jitclass.SaturationRelaxationUtilities#7fc21149c5b0<L:int32,W:int32,PU:DeferredType#140471490431008,max_iter:int32,diffusion_rules:array(float32, 3d, C)>\u001b[0m\n\u001b[0m\u001b[1mDuring: typing of call at <string> (3)\n\u001b[0m\n\u001b[0m\u001b[1mDuring: resolving callee type: jitclass.SaturationRelaxationUtilities#7fc21149c5b0<L:int32,W:int32,PU:DeferredType#140471490431008,max_iter:int32,diffusion_rules:array(float32, 3d, C)>\u001b[0m\n\u001b[0m\u001b[1mDuring: typing of call at <string> (3)\n\u001b[0m\n\u001b[1m\nFile \"<string>\", line 3:\u001b[0m\n\u001b[1m<source missing, REPL/exec in use?>\u001b[0m\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[-2.6711958e+07 -2.6711958e+07 -2.6711958e+07 -2.6711958e+07\n",
+      "   -2.6711958e+07 -2.6711958e+07]\n",
+      "  [-2.6711958e+07 -2.6711958e+07 -2.6711958e+07 -2.6711958e+07\n",
+      "   -2.6711958e+07 -2.6711958e+07]\n",
+      "  [-2.6711958e+07 -2.6711958e+07 -2.6711958e+07 -2.6711958e+07\n",
+      "   -2.6711958e+07 -2.6711958e+07]\n",
+      "  ...\n",
+      "  [ 5.6051939e-45  9.4039548e-38  0.0000000e+00  0.0000000e+00\n",
+      "    0.0000000e+00  0.0000000e+00]\n",
+      "  [ 1.9259299e-33  6.8663625e-44 -3.5486770e+31  3.0682831e-41\n",
+      "   -3.5487389e+31  3.0682831e-41]\n",
+      "  [-3.5485532e+31  3.0682831e-41  1.1093356e-31  6.8663625e-44\n",
+      "   -3.5486770e+31  3.0682831e-41]]\n",
+      "\n",
+      " [[ 1.6666667e-01  3.3333334e-01  3.3333334e-01  1.6666667e-01\n",
+      "    0.0000000e+00  0.0000000e+00]\n",
+      "  [ 1.6666667e-01  1.6666667e-01  1.6666667e-01  1.6666667e-01\n",
+      "    1.6666667e-01  1.6666667e-01]\n",
+      "  [ 1.6666667e-01  1.6666667e-01  1.6666667e-01  1.6666667e-01\n",
+      "    1.6666667e-01  1.6666667e-01]\n",
+      "  ...\n",
+      "  [ 1.6666667e-01  1.6666667e-01  1.6666667e-01  1.6666667e-01\n",
+      "    1.6666667e-01  1.6666667e-01]\n",
+      "  [ 1.6666667e-01  1.6666667e-01  0.0000000e+00  1.6666667e-01\n",
+      "    1.6666667e-01  3.3333334e-01]\n",
+      "  [-3.5490019e+31  3.0682831e-41  4.2038954e-45  9.4039548e-38\n",
+      "    0.0000000e+00  0.0000000e+00]]\n",
+      "\n",
+      " [[ 1.6666667e-01  3.3333334e-01  3.3333334e-01  1.6666667e-01\n",
+      "    0.0000000e+00  0.0000000e+00]\n",
+      "  [ 1.6666667e-01  1.6666667e-01  1.6666667e-01  1.6666667e-01\n",
+      "    1.6666667e-01  1.6666667e-01]\n",
+      "  [ 1.6666667e-01  1.6666667e-01  1.6666667e-01  1.6666667e-01\n",
+      "    1.6666667e-01  1.6666667e-01]\n",
+      "  ...\n",
+      "  [ 1.6666667e-01  1.6666667e-01  1.6666667e-01  1.6666667e-01\n",
+      "    1.6666667e-01  1.6666667e-01]\n",
+      "  [ 3.3333334e-01  0.0000000e+00  0.0000000e+00  0.0000000e+00\n",
+      "    3.3333334e-01  3.3333334e-01]\n",
+      "  [-3.0619596e+31  3.0682831e-41  0.0000000e+00  0.0000000e+00\n",
+      "    0.0000000e+00  0.0000000e+00]]\n",
+      "\n",
+      " ...\n",
+      "\n",
+      " [[ 0.0000000e+00  0.0000000e+00 -3.5774165e+31  3.0682831e-41\n",
+      "    1.4012985e-45  5.6051939e-45]\n",
+      "  [-6.1517003e-43  0.0000000e+00  0.0000000e+00  0.0000000e+00\n",
+      "    0.0000000e+00  0.0000000e+00]\n",
+      "  [-3.5774262e+31  3.0682831e-41  1.4012985e-45  5.6051939e-45\n",
+      "   -6.1376873e-43  0.0000000e+00]\n",
+      "  ...\n",
+      "  [ 0.0000000e+00  0.0000000e+00  0.0000000e+00  0.0000000e+00\n",
+      "    0.0000000e+00  0.0000000e+00]\n",
+      "  [ 0.0000000e+00  0.0000000e+00  0.0000000e+00  0.0000000e+00\n",
+      "    0.0000000e+00  0.0000000e+00]\n",
+      "  [ 0.0000000e+00  0.0000000e+00  0.0000000e+00  0.0000000e+00\n",
+      "    0.0000000e+00  0.0000000e+00]]\n",
+      "\n",
+      " [[ 0.0000000e+00  0.0000000e+00  0.0000000e+00  0.0000000e+00\n",
+      "    0.0000000e+00  0.0000000e+00]\n",
+      "  [ 0.0000000e+00  0.0000000e+00  0.0000000e+00  0.0000000e+00\n",
+      "    0.0000000e+00  0.0000000e+00]\n",
+      "  [ 0.0000000e+00  0.0000000e+00  0.0000000e+00  0.0000000e+00\n",
+      "    0.0000000e+00  0.0000000e+00]\n",
+      "  ...\n",
+      "  [ 0.0000000e+00  0.0000000e+00  0.0000000e+00  0.0000000e+00\n",
+      "    0.0000000e+00  0.0000000e+00]\n",
+      "  [ 0.0000000e+00  0.0000000e+00  0.0000000e+00  0.0000000e+00\n",
+      "    0.0000000e+00  0.0000000e+00]\n",
+      "  [ 0.0000000e+00  0.0000000e+00  0.0000000e+00  0.0000000e+00\n",
+      "    0.0000000e+00  0.0000000e+00]]\n",
+      "\n",
+      " [[ 0.0000000e+00  0.0000000e+00  0.0000000e+00  0.0000000e+00\n",
+      "    0.0000000e+00  0.0000000e+00]\n",
+      "  [ 0.0000000e+00  0.0000000e+00  0.0000000e+00  0.0000000e+00\n",
+      "    0.0000000e+00  0.0000000e+00]\n",
+      "  [ 0.0000000e+00  0.0000000e+00  0.0000000e+00  0.0000000e+00\n",
+      "    0.0000000e+00  0.0000000e+00]\n",
+      "  ...\n",
+      "  [ 0.0000000e+00  0.0000000e+00  1.4012985e-45  3.0682831e-41\n",
+      "   -0.0000000e+00  3.0682831e-41]\n",
+      "  [ 0.0000000e+00  0.0000000e+00  1.4012985e-45  3.0682831e-41\n",
+      "    0.0000000e+00  0.0000000e+00]\n",
+      "  [ 1.4012985e-45  3.0682831e-41 -0.0000000e+00  1.4012985e-45\n",
+      "    0.0000000e+00  0.0000000e+00]]]\n"
      ]
     }
    ],
    "source": [
-    "sru = icef.SaturationRelaxationUtilities(101, pu, 200)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "neighbor_array_test = gu.neighbor_array\n",
-    "diffusion_rules_test = sru.diffusion_rules"
+    "diffusion_rules_test = sru.diffusion_rules\n",
+    "\n",
+    "print(diffusion_rules_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -130,22 +209,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n",
-      "4\n",
-      "[[1.         1.         1.         1.         1.        ]\n",
-      " [1.         1.         1.         1.         1.        ]\n",
-      " [1.         1.         1.         1.         1.        ]\n",
-      " [0.9999831  0.9999212  0.9998375  0.99979866 1.        ]\n",
-      " [0.99968517 0.99934995 0.9991115  1.         1.        ]\n",
-      " [0.9984669  0.9972105  0.9965122  1.         1.        ]\n",
-      " [0.9952073  0.991714   1.         1.         1.        ]\n",
+      "False\n",
+      "200\n",
+      "[[0.9937453  0.9931462  0.99264514 0.9922927  0.99213755]\n",
+      " [0.9923508  0.9916322  0.9910597  0.99070376 0.99058825]\n",
+      " [0.9906505  0.9897847  0.9891409  0.9888431  1.        ]\n",
+      " [0.9885575  0.9875037  0.98678505 0.986533   1.        ]\n",
+      " [0.9859507  0.98463356 0.9838852  1.         1.        ]\n",
+      " [0.9827002  0.980803   0.9797492  1.         1.        ]\n",
+      " [0.97920275 0.9744718  1.         1.         1.        ]\n",
       " [1.         1.         1.         1.         1.        ]\n",
       " [1.         1.         1.         1.         1.        ]\n",
       " [1.         1.         1.         1.         1.        ]]\n"
@@ -160,7 +239,7 @@
     "# for i in range(50):\n",
     "#     sru._execute_relaxation_step(sat_map_test, normal_cells_test, boundary_cells_test, opp_array_test, neighbor_array_test, boundary_map_test)\n",
     "\n",
-    "new_thang = sru.diffuse_to_convergence(sat_map_test, 200, 0.001, normal_cells_test, boundary_cells_test, default_ice_map, boundary_map_test, neighbor_array_test)\n",
+    "new_thang = sru.diffuse_to_convergence(sat_map_test, 200, 0.00001, normal_cells_test, boundary_cells_test, default_ice_map, boundary_map_test, neighbor_array_test, pu)\n",
     "print(new_thang[1])\n",
     "print(new_thang[2])\n",
     "print(new_thang[0][-10:,:5])"
